2004-09-09  Matthias Clasen  <mclasen@redhat.com>

	* tests/testfilechooser.c (main): Update sensitivity of the "Select all"
	button.

2004-09-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_expander): Draw expanders a bit 
	better.

2004-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Use the proper node type
	for placeholders in toolbars.  (#151963, Olivier Andrieu)

2004-09-06  Kjartan Maraas  <kmaraas@gnome.org>

	gtk/gtkfilesystemmodel.c (do_files_added): Use the correct
	function to free stuff. Avoids a leak and a warning.
	Closes bug #151985

Sat Sep  4 23:42:09 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Fix the Solaris Xinerama checks.  (#151754) 

Fri Sep  3 22:45:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (print_node): Don't print out attributes
	for the <ui> root node.  (#151752, Lorenzo Gil Sánchez)

2004-09-03  Tor Lillqvist  <tml@iki.fi>

	* gtk-zip.sh.in: List the three theme gtkrc files separately, zip
	doesn't do anything if one of the files on its command line
	doesn't exist.

	Handle changes of screen resolution on Win32. (#151581, reported by
	Arjohn Kampman)
	
	* gdk/win32/gdkwindow-win32.c (_gdk_windowing_window_init,
	_gdk_root_window_size_init): Factor out setting the root window's
	size (as the size of the union of all monitors) to a new function.

	* gdk/win32/gdkdisplay-win32.c (gdk_display_open,
	_gdk_monitor_init): Factor out the monitor query to a new
	function.

	* gdk/win32/gdkprivate-win32.h: Declare above new functions.

	* gdk/win32/gdkevents-win32.c (gdk_event_translate,
	handle_display_change): Handle WM_DISPLAYCHANGE by calling the
	above two functions, and emitting the "size_changed" signal on our
	(only) GdkScreen.

Wed Sep  1 19:11:44 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtktoolbar.c (gtk_toolbar_size_allocate): Make sure
	children of the toolbar are given positive dimensions. (149540,