@@ -834,6 +834,9 @@ gtk_entry_completion_set_model (GtkEntryCompletion *completion,
   gtk_tree_view_set_model (GTK_TREE_VIEW (completion->priv->tree_view),
                            GTK_TREE_MODEL (completion->priv->filter_model));
   g_object_unref (G_OBJECT (completion->priv->filter_model));
+
+  if (GTK_WIDGET_VISIBLE (completion->priv->popup_window))
+    _gtk_entry_completion_resize_popup (completion);
 }
 
 /**
@@ -1157,9 +1160,6 @@ _gtk_entry_completion_resize_popup (GtkEntryCompletion *completion)
   
   gdk_window_get_origin (completion->priv->entry->window, &x, &y);
   get_borders (GTK_ENTRY (completion->priv->entry), &x_border, &y_border);
-
-  x += x_border;
-  y += 2 * y_border;
 
   matches = gtk_tree_model_iter_n_children (GTK_TREE_MODEL (completion->priv->filter_model), NULL);
 
